# rust-chat-gpt

./: .env_sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
config/: log4rs.yaml
src/: main.rs
src/libs/: libs.rs
src/models/: models.rs
